# OBEDI-VL

./: .dockerignore  .env  .env.example  .gitignore  .railwayignore  AGENTS.md  App.tsx  Caddyfile  Dockerfile  README.md  data.ts  docker-compose.prod.yml  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  railway.toml  server.mjs  tmp_evotor_auth.html  tmp_evotor_oauth_guide.html  types.ts  vite.config.ts
backend/: Dockerfile  README.md  alembic.ini  app.db-wal  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py  settings.py  utils.py
backend/app/api/: __init__.py  deps.py  errors.py  router.py  schemas.py
backend/app/api/routers/: ai.py  auth.py  delivery.py  evotor.py  health.py  orders.py
backend/app/core/: __init__.py  database.py  logging.py  settings.py
backend/app/db/: models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 72708f938f58_add_rate_limits_table.py  a1b2c3d4e5f6_add_blocked_until_and_indexes.py  f2b3d4e5a6b7_init.py
backend/app/repositories/: __init__.py  orders.py  otp_codes.py  sessions.py  users.py
backend/app/scripts/: migrate.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  delivery_service.py  errors.py  evotor_auth.py  evotor_client.py  evotor_service.py  evotor_token_store.py  gemini_client.py  maintenance_service.py  order_service.py  rate_limiter.py  sms.py
backend/app/utils/: __init__.py  cache.py  envfile.py  network.py  phone.py  security.py  time.py
components/: AIChef.tsx  FAQModal.tsx  (+14 more)
(+5 files in other folders)
